--- a/first-app/src/components/post-list-item/post-list-item.css
+++ b/first-app/src/components/post-list-item/post-list-item.css
@@ -9,6 +9,8 @@
   font-size: 17px;
   border: none;
   cursor: pointer;
+    background-color: transparent;
+    position: relative
 }
 .app-list-item button:focus {
     box-shadow: none;
@@ -19,6 +21,9 @@
 }
 .app-list-item .btn-trash {
     color: red;
+}
+.app-list-item .btn-edit {
+    color: black;
 }
 .app-list-item .fa-heart {
     width: 35px;
@@ -57,6 +62,24 @@
     font-size: 10px;
 }
 
-.app-list-item button{
-    background-color: transparent;
+.hide{
+    display: none !important;
+}
+
+.edit-form{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+}
+
+.app-list-item .edit-btn{
+    height: auto;
+    width: auto;
+    background-color: #aeaeae
 }
